@@ -42,6 +42,7 @@ version <next>:
 - siren audio decoder
 - Rayman 2 ADPCM decoder
 - Rayman 2 APM demuxer
+- cas video filter
 
 
 version 4.2:
